# howick-rs

./: Cargo.toml  README.md  init.sh  mise.toml
.github/workflows/: ci.yml
docs/: adr-opcua-integration.md  factory-context.md
src/: error.rs  lib.rs  types.rs
src/csv/: mod.rs  parser.rs  serializer.rs
tests/: e2e_validation.rs  integration.rs
