[package]
name = "howick-rs"
version = "0.1.0"
edition = "2021"
description = "Rust library for generating Howick FRAMA machine CSV files for light gauge steel framing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeblew999/howick-rs"
keywords = ["howick", "steel-framing", "manufacturing", "cnc", "csv"]
categories = ["encoding", "science"]
readme = "README.md"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
